# nix-cpp-test

./: .envrc  CMakeLists.txt  flake.nix
libs/Fibonacci/: CMakeLists.txt  default.nix  pkg.pc.in
libs/Fibonacci/include/: Fibonacci.h
libs/Fibonacci/include/acme/: Fibonacci.h
libs/Fibonacci/src/: Fibonacci.cpp
libs/Fibonacci/tests/: CMakeLists.txt  test_fibonacci.cpp
src/: CMakeLists.txt  default.nix  main.cpp  test.cpp
